fix: buttons shadow fix

--- a/src/html/home/about.html
+++ b/src/html/home/about.html
@@ -116,13 +116,11 @@
           </div>
         </div>
 
-        <a
-          href="services.html"
-          class="about__button button"
-          aria-label="Начать проект"
-        >
-          Начать проект
-        </a>
+        <div class="about__button-wrapper">
+          <a href="services.html" class="about__button button" aria-label="Начать проект">
+            Начать проект
+          </a>
+        </div>
       </div>
     </div>
   </div>
